--- a/slider.html
+++ b/slider.html
@@ -5,8 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <script src="script.js"></script>
-        <link rel="stylesheet" href="style.css" />
     <style>
         .slider { 
             position: relative;
@@ -76,17 +74,18 @@
 
             sliderNext.addEventListener("click", function() {
                 for(i = 0; i < slides.length - 1; i++) {
-                    slides[i-1].style.display = "none";
-                    slides[i].style.display = "block";
+                    slides[i].style.display = "none";
+                    slides[i+1].style.display = "block";
+
+                    sliderPagination.textContent = '${i+1}/${slides.length}';
+                    console.log(i)
                 };
-        
-                sliderPagination.textContent = '${i+1}/${slides.length}';
             });
 
             sliderPrev.addEventListener("click", function() {
-                for(i = slides.length; i > 0; i--) {
-                    slides[i].style.display = "none";
-                    slides[i-1].style.display = "block";
+                for(i = slides.length - 1; i >= 0; i--) {
+                    slides[i-1].style.display = "none";
+                    slides[i].style.display = "block";
                 };
                    
                 sliderPagination.textContent = '${i+1}/${slides.length}';
@@ -97,5 +96,3 @@
 </body>
 
 </html>
-
-//1
